# ClickUpTracker

./: .gitignore  ARCHITECTURE.md  FINAL_OVERVIEW.txt  IMPLEMENTATION.md  Info.plist  PROJECT_SUMMARY.txt  Package.swift  QUICKSTART.md  README.md  UI_GUIDE.md  build.sh  clickup_client.py  clickup_tracker.py  config.example.json  create-app-bundle.sh  example_usage.py  pyproject.toml  requirements.txt  run-with-logs.sh  setup.sh  test_clickup_tracker.py
Sources/ClickUpTracker/: ClickUpAPI.swift  ClickUpTrackerApp.swift  GlobalShortcutManager.swift  KeyboardShortcut.swift  MenuBarView.swift  NotificationManager.swift  SettingsManager.swift  SettingsView.swift  ShortcutRecorderView.swift  TaskCache.swift  TaskSelectorView.swift  TimeTracker.swift
docs/: API_REFERENCE.md  CLEANUP_SUMMARY.md  DEVELOPER_GUIDE.md  PROJECT_STRUCTURE.md  README.md  RECENT_CHANGES.md  TROUBLESHOOTING.md  USER_GUIDE.md
